--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,9 +16,8 @@ jobs:
       - name: Deploy Content
         uses: peaceiris/actions-gh-pages@v2
         env:
-          PERSONAL_TOKEN: ${{ secrets.DEPLOYMENT_TOKEN }}
-          EXTERNAL_REPOSITORY: lxlxdan/BTCRUCLUB
-          PUBLISH_BRANCH: master
+          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: ./Output
         with:
           commitMessage: ${{ github.event.head_commit.message }}
