--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,23 +1,30 @@
-name: Build and Deploy MyWebsite
+name: Deploy Github Pages
 
 on:
   push:
     branches:
-      - master
+    - master
 
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-18.04
+  gh-pages:
+    runs-on: ubuntu-latest
+    container:
+      image: "swift:5.2" 
     steps:
-      - name: Checkout Source
-        uses: actions/checkout@v1
-      - name: Build Site
-        run: swift run BTCRUCLUB
-      - name: Deploy Content
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./Output
-        with:
-          commitMessage: ${{ github.event.head_commit.message }}
+    - name: Checkout
+      uses: actions/checkout@v1
+        
+    - name: Build Publish
+      run: |
+        git clone https://github.com/JohnSundell/Publish.git
+        cd Publish
+        make
+    - name: Generate Site
+      run: publish generate
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v2
+      env:
+        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: ./Output
